tests/Project2/student_test/test_2_s08.out
Error type 3 at Line 4: redefined variable: a
Error type 5 at Line 5: unmatching type on both sides of assignment