tests/Project2/student_test/test_2_s08.spl
int test()
{
  int a;
  int a[5];
  a[5] = a;
}